Fix Scrollbar, Alert & Progress bar

--- a/app/less/inc/header.less
+++ b/app/less/inc/header.less
@@ -11,7 +11,7 @@
                 color: #337ab7;
 
                 &:hover {
-                    text-decoration: underline;
+                    color: #275d8c;
                 }
             }
 
